feat: Integrate htmx for modern AJAX support in VCL for PHP
- Updated README.md to reflect new repository URL and installation instructions.
- Added demo_htmx.php to showcase htmx integration.
- Created package.json for managing htmx dependency.
- Enhanced standard.package.php to register htmx properties.
- Implemented HtmxHandler.php for processing htmx AJAX requests.
- Introduced vcl-htmx.js for VCL-specific htmx helper functions.
- Modified Component.php to support htmx event generation.
- Updated Application.php to handle AJAX requests, including htmx.
- Enhanced Page.php to process htmx requests and include htmx scripts.
- Updated Button and ButtonControl classes to support htmx attributes.
- Added helper methods in FocusControl for generating htmx attributes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,8 +44,17 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-composer-
 
-      - name: Install dependencies
+      - name: Install Composer dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24'
+          cache: 'npm'
+
+      - name: Install npm dependencies
+        run: npm ci
 
       - name: Run PHPStan
         run: composer analyse
