--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,10 +50,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '24'
-          cache: 'npm'
 
       - name: Install npm dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run PHPStan
         run: composer analyse
