Add htmx demo and simple demo examples; refactor database package
- Introduced `demo_htmx.php` showcasing htmx integration with AJAX functionality.
- Added `demo_simple.php` demonstrating basic VCL usage with input and output.
- Refactored `database.package.php` to utilize Doctrine DBAL for database components.
- Enhanced `Connection`, `Query`, `Table`, and `StoredProc` classes with new features and methods.
- Implemented unit tests for `StoredProc` to ensure functionality and edge cases are covered.
- Updated PHPStan configuration to include example paths and dynamic field access handling.

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ parameters:
     level: 5
     paths:
         - src/VCL
+        - examples
     excludePaths:
         - src/VCL/Legacy/*
 
@@ -29,6 +30,11 @@ parameters:
         # Dynamic property access for Delphi-style components
         - '#Access to an undefined property VCL\\Core\\Component::#'
         - '#Access to an undefined property VCL\\Core\\Persistent::#'
+
+        # Dynamic field access via __get/__set for database components (VCL-style: $query->fieldname)
+        - '#Access to an undefined property VCL\\Database\\Query::\$[a-z]#'
+        - '#Access to an undefined property VCL\\Database\\Table::\$[a-z]#'
+        - '#Access to an undefined property VCL\\Database\\StoredProc::\$[a-z]#'
 
         # Magic method __get/__set dynamic access
         - '#Cannot access property \$[A-Z].+ on mixed#'
